# ngo-shipbreaking-clean-scrapped-ships

./: 2012_2024_dismantled_ships.csv  LICENSE  README.md  main.ipynb  pyproject.toml
annual_lists/csvs/: 2012-dismantled-ships.csv  2013-dismantled-ships.csv  2015-dismantled-ships.csv  2016-dismantled-ships.csv  2017-dismantled-ships.csv  2018-dismantled-ships.csv  2019-dismantled-ships.csv  2020-dismantled-ships.csv  2021-dismantled-ships.csv  2022-dismantled-ships.csv  2023-dismantled-ships.csv  2024-dismantled-ships.csv
